--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main id="main">
       <figure id="img-div">
       <div>
-        <img id="image" src="/assets/img/Elizath.jpg">
+        <img id="image" src="assets/img/Elizath.jpg">
         </div>
         <figcaption id="img-caption">Elizabeth at age 19 (Lisa Sheridan/Studio Lisa/Getty Images)</figcaption>
       </figure>
