--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <h1 id="title">RAINHA Elizabeth II</h1>
     <p>His reign lasted 70 years.</p>
   </head>
@@ -9,7 +9,7 @@
     <main id="main">
       <figure id="img-div">
       <div>
-        <img id="image" src="assets/img/Elizath.jpg">
+        <img id="image" src="./assets/img/Elizath.jpg">
         </div>
         <figcaption id="img-caption">Elizabeth at age 19 (Lisa Sheridan/Studio Lisa/Getty Images)</figcaption>
       </figure>
