--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li>On February 6, 2022, aged 95, Queen Elizabeth II completed 70 years of reign and celebrated the Platinum Jubilee.</li>
           <li>On September 8, 2022, Queen Elizabeth II dies at the age of 96 at Balmoral Palace, Scotland, in a holiday residence.</li>
         </ul>
-        <a id="tribute-link" href="https://pt.wikipedia.org/wiki/Isabel_II_do_Reino_Unido" target="_blank">Wikipedia entry></a>
+        <a id="tribute-link" href="https://pt.wikipedia.org/wiki/Isabel_II_do_Reino_Unido" target="_blank">Wikipedia entry</a>
       </section>
     </main>
   </body>
