--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <h1 id="title">RAINHA Elizabeth II</h1>
+    <h1 id="title">Elizabeth II</h1>
     <p>His reign lasted 70 years.</p>
   </head>
   <body>
